# NLP-team-project

./: .gitignore  README.md  app.py  devSpec.md  interview_graph.ipynb  package-lock.json  package.json  pyproject.toml  requirements.txt  면접에이전트 기획안 발표.pptx
assets/: 시스템구조 설계.txt  화면기획서.txt
frontend/: .prettierignore  index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  app.css
frontend/src/entity/chat/ui/: ActionButtons.tsx  Message.tsx
frontend/src/entity/persona/ui/: NewPersonaForm.tsx
frontend/src/feature/assessment/hook/: useAssessment.ts
frontend/src/feature/persona/: PersonaList.tsx
frontend/src/page/: ChatPage.tsx
frontend/src/shared/: Api.ts  Button.tsx  Dialog.tsx  LoadingSpinner.tsx  Panel.tsx  TextArea.tsx  chatStore.ts  frontStore.ts  toast.tsx  type.ts  utils.ts
frontend/src/widget/chat/: ChatWidget.tsx
rag_agent/: __init__.py  app.py
rag_agent/chains/: interview_chain.py  interview_graph.py  prompt_templates.py  store.py
rag_agent/chat_history/: ChatHistory.py  Singleton.py
rag_agent/data/: sample_docs.py
rag_agent/graph/: config.py  graph.py  routing.py  run_graph.py
rag_agent/graph/agents/: __init__.py  followup_agent.py  question_agent.py
rag_agent/graph/nodes/: __init__.py  classify_input.py  evaluate_answer.py  generate_followup.py  generate_question.py
rag_agent/graph/tools/: __init__.py  classify.py  evaluate.py  followup.py  question.py
rag_agent/graph/utils/: ChatHistory.py
rag_agent/persona/: Persona.py  PersonaService.py
(+12 files in other folders)
